# dream-meridian

./: .gitignore  BENCHMARK_RESULTS.md  DEVPOST.md  INSTALL.md  README.md  WRITEUP.md  app.py  arm.py  benchmark_full.sh  benchmark_quick.py  benchmark_results_pre.txt  build_location.py  dream-meridian.py  generate_tool_embeddings.py  geocode_layer.py  output3  pyproject.toml  requirements.txt  spatial_tools.py  spatial_tools_optimized.py  test_all_tools_v4.py  test_queries.py  tool_grammar.gbnf
.streamlit/: config.toml
benchmarks/: benchmark_mac.json  benchmark_mac_m3.json  benchmark_pi5.json  benchmark_steamdeck.json
data/: manhattan.nkb  node_mappings.json  tool_embeddings_mpnet.npy
data/coxs_bazar/: config.json  coxs_bazar.duckdb  coxs_bazar.nkb  coxs_bazar_mappings.json
data/dhaka/: config.json
data/jakarta/: config.json
data/san_juan/: config.json  san_juan.nkb  san_juan_mappings.json
